# rqm-optimize

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_optimize.py
src/rqm_optimize/: __init__.py  fusion.py  geometry.py  metrics.py  optimizer.py  qiskit_adapter.py
tests/: test_axis_aware.py  test_fusion.py  test_geometry_quaternion.py  test_optimize_qiskit.py  test_public_api.py
