[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rqm-optimize"
version = "0.1.0"
description = "SU(2)-aware circuit compression for quantum workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "RQM Technologies", email = "dev@rqm.tech" }]
keywords = ["quantum", "optimization", "qiskit", "circuit", "su2", "quaternion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "qiskit>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-optimize"
Repository = "https://github.com/RQM-Technologies-dev/rqm-optimize"
Issues = "https://github.com/RQM-Technologies-dev/rqm-optimize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rqm_optimize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
